<resources>
    <string name="app_name">hw_7_kutman_kalmurzaev</string>
    <string name="_0" translatable="false">0</string>
    <string name="ac">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplication">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="null0">0</string>
    <string name="tochka">.</string>
    <string name="ravno">=</string>
    <string name="_0_">0</string>
    <string name="_null">0</string>
    <string name="_0null">0</string>
    <string name="export_as_csv">Export as CSV</string>
    <string name="policies">Policies</string>
    <string name="result">Result</string>
    <string name="police">Police</string>
    <string name="product_category">Product Category</string>
    <string name="origin_country">Origin Country</string>
    <string name="brand">Brand</string>
    <string name="next">Next</string>
</resources>